<?xml version="1.0"?>
<package>
  <name>rocinante</name>
  <version>0.0.1</version>
  <description>Rocinante library</description>

  <maintainer email="f.ramirez@pem.rwth-aachen.de">deempalme</maintainer>


  <license>BSD</license>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_laserscan</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_laserscan</run_depend>
  <export>
  </export>
</package>
